# S5DebugAdaptor

./: .gitignore  CMakeLists.txt  conanfile.txt
S5DebugAdaptor/: Hooks.cpp  Hooks.h  Resource.rc  adaptor.cpp  adaptor.h  debugger.cpp  debugger.h  dllmain.cpp  server.cpp  server.h  shok.cpp  shok.h  utility.cpp  utility.h  winhelpers.cpp  winhelpers.h
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
extension/src/: extension.ts
extension/src/debugadaptor/: debugadaptor.ts  findprocess.ts
extension/src/public/htmlwebview/: index.html
extension/src/webview/: webview.ts
extension/utils/: cleanOutput.js  copy.js  copyPublicToOutput.js
